--- a/WebStudy/web/html5/05_a标签-base标签.html
+++ b/WebStudy/web/html5/05_a标签-base标签.html
@@ -16,9 +16,10 @@
 
     <!--target 跟base 不一致的话，可以单独指定-->
     <a href="http://www.baidu.com" target="_self"  title="链接提示信息">
-        <img src="../imgs/003.jpg">
+        <img src="../WEB-INF/imgs/003.jpg">
     </a>  <!--点击图片跳转-->
 
+    <a href="04_img标签-bt标签.html">04_img标签-bt标签</a>
 
     <!-- 假链接
         1. 两种方式
