--- a/WebStudy/web/html5/13_定义列表练习1.html
+++ b/WebStudy/web/html5/13_定义列表练习1.html
@@ -7,7 +7,7 @@
 <body>
 
 <dl>
-    <dt><img src="../imgs/张译.webp" alt="" height="300px">
+    <dt><img src="../WEB-INF/imgs/张译.webp" alt="" height="300px">
     </dt>
     <dd>
         <h2>张译简介</h2>
